--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -5,7 +5,7 @@
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-  padding: 0 20px;
+  padding: 100px 20px;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
@@ -110,8 +110,10 @@
   }
   .elevator-btn {
     margin: auto 0 0 auto;
-    height: 100px;
-    width: 100px;
-    background: blue;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    background-size: cover;
+    background-image: url('img/arrow.svg')
   }
 }
