--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -2,19 +2,21 @@
 
   from {
     opacity: 0;
+    transform: scale(1.4)
   }
   to {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 .hero {
   width: 100%;
-  height: 750px;
+  height: 100vh;
   background-image: linear-gradient(
       to right,
-      rgba(28, 26, 26, 0.962),
-      rgba(29, 26, 26, 0.4)
+      rgba(28, 26, 26, 0.884),
+      rgba(29, 26, 26, 0.103)
     ),
     url("img/hero-image.jpg");
   position: relative;
@@ -29,7 +31,7 @@ padding: 0 30px;
     // padding: 30px 0;
     background-color: rgba(14, 13, 13, 0.064);
     text-align: center;
-  
+    animation-delay: 4s;
     animation: opacityText 4s ease;
     border: solid 2px rgb(254, 254, 254);
     padding: 30px; 
