--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -47,7 +47,7 @@
       font-family: "Share", cursive;
       padding: 16px;
       border-radius: 10px;
-      margin: 0 auto;
+      margin: 50px auto 0 auto;
       display: block;
       &:hover {
         opacity: 0.9;
