--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -5,10 +5,11 @@
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-  padding: 100px 20px;
+  padding: 100px 20px 20px 20px;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
+   
   }
 
   &__form {
@@ -92,32 +93,35 @@
     height: auto;
     margin-top: 30px;
     a {
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       color: black;
       font-family: 'Montserrat';
     }
     .contact-container__email-icon {
       background-image: url('img/mail-icon.svg');
       background-size: cover;
-      height: 50px;
-      width: 50px;
+      height: 40px;
+      width: 40px;
       margin: 5px auto;
     }
     .contact-container__phone-icon {
       background-image: url('img/phone-icon.svg');
       background-size: cover;
-      height: 50px;
-      width: 50px;
+      height: 40px;
+      width: 40px;
       margin: 5px auto;
 
     }
   }
   .elevator-btn {
-    margin: auto 0 0 auto;
+   margin: 40px 0 0 auto;
     height: 50px;
     width: 50px;
     cursor: pointer;
     background-size: cover;
     background-image: url('img/arrow.svg');
+    @media (min-width: 460px) {
+      margin: auto 0 0 auto;
+    }
   }
 }
