--- a/src/assets/partials/_home.scss
+++ b/src/assets/partials/_home.scss
@@ -1,20 +1,15 @@
-
-
 .intro-container {
-   background-color: rgba(247, 244, 244, 0.994);
-    height: 300px;
-    margin-top: 20px;
-    width: 100%;
-   height: 300px;
-
-
-    p {
-        font-family: 'Share', cursive;
-        font-size: 2.5rem;
-        max-width: 90%;
-        text-align: center;
-        margin: 0 auto;
-        max-height: 100%;
-     
-    }
+  background-color: rgba(247, 244, 244, 0.994);
+  height: 300px;
+  margin-top: 20px;
+  width: 100%;
+  height: 300px;
+  p {
+    font-family: "Share", cursive;
+    font-size: 2.5rem;
+    max-width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    max-height: 100%;
+  }
 }
