--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -11,7 +11,7 @@
 
   &__menu-icon {
     cursor: pointer;
-    margin-right: auto;
+    margin-right: 10px;
     background-image: url("https://i.imgur.com/IvwKc3H.png");
     height: 50px;
     width: 50px;
@@ -23,8 +23,8 @@
       content: "Menu";
       display: block;
       position: absolute;
-      right: 75px;
-      top: 35px;
+      right: 73px;
+      top: 37px;
       font-size: 1.8rem;
       font-family: "Share", cursive;
       color: white;
@@ -84,23 +84,26 @@
 }
 
 .mobile-nav {
-  display: none;
+ 
   background-color: rgb(23, 22, 22);
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: 1000;
-
+  margin-left: -500px;
   top: 0;
+  @media (min-width: 460px) {
+    display: none;
+  }
   &__menu-icon--mobile {
     position: absolute;
-    top: 5px;
+    top: 25px;
     right: 0;
-
+    margin-right: 13px;
     background-image: url("https://i.imgur.com/IvwKc3H.png");
     height: 50px;
     width: 50px;
-    margin-right: 10px;
+    // margin-right: 10px;
     cursor: pointer;
     &::before {
       content: "Menu";
