--- a/src/assets/partials/_About.scss
+++ b/src/assets/partials/_About.scss
@@ -6,11 +6,11 @@
   justify-content: space-around;
   flex-direction: column;
   margin: 0 auto;
-  padding: 100px 20px;
+padding: 30px;
   img {
     display: block;
     width: 300px;
-    height: 280px;
+    height: 350px;
     border-radius: 20px;
     margin: 0 auto;
   }
@@ -21,7 +21,6 @@
     text-align: center;
 
     h2 {
-      color: rgb(0, 0, 0);
       font-family: "Share", cursive;
       text-transform: uppercase;
       font-size: 2.5rem;
