--- a/src/assets/partials/_contact.scss
+++ b/src/assets/partials/_contact.scss
@@ -1,17 +1,15 @@
 .contact-container {
   background-color: rgb(255, 255, 255);
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   height: 100%;
-  padding: 100px 20px 20px 20px;
+  margin: 0 auto;
   @media (min-width: 760px) {
     flex-direction: row;
     justify-content: space-around;
-   
   }
-
   &__form {
     width: 80%;
     height: 100%;
@@ -21,7 +19,7 @@
     }
     h2 {
       font-family: "Share", cursive;
-      font-size: 2.5rem;
+      font-size: 4rem;
     }
     p {
       font-family: "Montserrat";
@@ -87,7 +85,7 @@
   padding: 20px;
   @media (min-width: 760px) {
     width: 50%;
-    height: 700px;
+    height: 600px;
   }
   .contact-container__side__info {
     height: auto;
@@ -113,15 +111,5 @@
 
     }
   }
-  .elevator-btn {
-   margin: 40px 0 0 auto;
-    height: 50px;
-    width: 50px;
-    cursor: pointer;
-    background-size: cover;
-    background-image: url('img/arrow.svg');
-    @media (min-width: 460px) {
-      margin: auto 0 0 auto;
-    }
-  }
+
 }
