--- a/src/assets/partials/_header.scss
+++ b/src/assets/partials/_header.scss
@@ -1,14 +1,14 @@
 .main-nav {
   //   background-color: rgb(245, 243, 243);//403e3e
-
+  top: 0;
   z-index: 100;
-  position: absolute;
+  position: fixed;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100px;
-
+background-color: rgb(43, 43, 43);
   &__menu-icon {
     cursor: pointer;
     margin-right: 10px;
@@ -72,6 +72,7 @@
         font-size: 1.8rem;
         text-transform: uppercase;
         font-family: "Share", cursive;
+        @include hoverLinks;
       }
     }
   }
@@ -84,7 +85,6 @@
 }
 
 .mobile-nav {
- 
   background-color: rgb(23, 22, 22);
   width: 100%;
   height: 100%;
