--- a/src/assets/partials/_hero.scss
+++ b/src/assets/partials/_hero.scss
@@ -11,15 +11,16 @@
 
 .hero {
   width: 100%;
-  height: 100vh;
-  background-image: 
-    url("img/hero-image.jpg");
-  position: relative;
+  height: 89vh;
+  background: url("https://bit.ly/2z3O5bR") rgba(0, 0, 0, 0.781);
+  background-blend-mode: multiply;
+  position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-attachment: fixed;
   transform: scale(1);
   padding: 0 30px;
   &__content {
