--- a/src/assets/partials/_projects.scss
+++ b/src/assets/partials/_projects.scss
@@ -1,5 +1,7 @@
 .projects-container {
-  padding-top: 60px;
+  width: 100%;
+ padding: 30px;
+  height: 100%;
   h2 {
     text-align: center;
     font-size: 4rem;
@@ -11,25 +13,22 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: rgba(255, 255, 255, 0.893);
+    background-color: rgb(255, 255, 255);
     &__card {
       width: 365px;
       margin-bottom: 50px;
       height: 380px;
-      box-shadow: 0 0 30px 0 rgba(69, 68, 68, 0.653);
+      // box-shadow: 0 0 20px 0 rgb(69, 68, 68);
       position: relative;
       @media (min-width: 700px) {
         width: 450px;
       }
-
       img {
         width: 100%;
         height: 100%;
       }
-
       &__content {
-        background-color: rgba(0, 0, 0, 0.829);
-
+        background-color: rgba(0, 0, 0, 0.596);
         padding: 30px;
         height: 100%;
         position: absolute;
@@ -57,6 +56,7 @@
           font-family: "Montserrat";
           font-size: 1.05rem;
           line-height: 1.5;
+          min-height: 100px;
         }
         a {
           width: 170px;
